TISTUD-4645 Proxy: Install Titanium SDK from local URL: Platform proxy API not available   - Move away from use of URL to use of URI due to way URL may actually look up hostnames in some instances which can lead to nasty perf issues   - Add special case FileDownloadRequest for when we're asked to download from a file: URI - we just shortcut to use EFS and do a file copy so we avoid the ECF/proxy code.   - Add fix and unit test for adding a null value into a map in the newTypedMap/addToMap flow   - Add unit tests around DownloadManager